--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -10,7 +10,8 @@
     "build": "tsup",
     "dev": "bunx tsx src/index.ts",
     "lint": "eslint \"src/**/*.ts\"",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run"
   },
   "dependencies": {
     "@seo-agent/platform": "file:../../packages/platform",
@@ -25,6 +26,7 @@
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
