--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -9,7 +9,14 @@
       "import": "./src/index.ts"
     }
   },
+  "scripts": {
+    "test": "vitest run"
+  },
   "dependencies": {
     "@seo-agent/domain": "file:../domain"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7",
+    "vitest": "^1.6.0"
   }
 }
