--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -24,6 +24,7 @@
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
