--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,18 +21,20 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@seo-agent/auth": "file:../../packages/auth",
+    "@seo-agent/cms": "file:../../packages/cms",
     "@seo-agent/db": "file:../../packages/db",
     "@seo-agent/domain": "file:../../packages/domain",
     "@seo-agent/platform": "file:../../packages/platform",
-    "@seo-agent/cms": "file:../../packages/cms",
     "@seo-agent/queue": "file:../../packages/queue",
     "@seo-agent/sdk": "file:../../packages/sdk",
+    "@t3-oss/env-core": "^0.13.8",
+    "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/devtools-vite": "^0.3.10",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-router": "^1.133.15",
     "@tanstack/react-router-ssr-query": "^1.133.16",
     "@tanstack/react-start": "^1.133.15",
     "@tanstack/router-devtools": "^1.133.15",
-    "@t3-oss/env-core": "^0.13.8",
     "@tiptap/pm": "^2.6.4",
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
@@ -44,8 +46,8 @@
     "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.546.0",
     "nitro": "^3.0.1-alpha.0",
-    "postgres": "^3.4.7",
     "postcss": "^8.4.49",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^2.0.7",
