--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,5 +39,5 @@
     "vite-env.d.ts",
     "tanstack.config.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests/e2e"]
 }
