--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-src/app/routeTree.gen.ts
-src/app/routes.d.ts
-.tanstack/
-node_modules/
-.output/
-.nitro/
-dist/
-.DS_Store
+.data/
+.github/
+/edit*
