feat(auth,ui,tests,db): Align Better Auth + Drizzle schema (users/emailVerified, accounts providerId/accountId, sessions token/ip/userAgent); pass schema to drizzle + adapter; add auth tables + migrations; UI gaps (Settings page, Keywords stats/filters + Plan/Star, Calendar guide, Articles tabs); route fix; compile-time import tests; Polar sandbox toggle; misc fixes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@
 .test-results/
 test-results/
 **/routeTree.gen.ts
+node_modules/
+dist/
+playwright-report/
+blob-report/
+.vite/
+.cache/
+logs/
+*.log
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+*.swo
+.history
+.eslintcache
+coverage/
+.tsbuildinfo
+.env
+.env.*
+.envrc
