--- a/base.tsconfig.json
+++ b/base.tsconfig.json
@@ -10,6 +10,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
+      "@src/*": ["src/*"],
       "~/*": ["src/*"],
       "@app/*": ["src/app/*"],
       "@blocks/*": ["src/blocks/*"],
