--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "drizzle-orm": "^0.44.6",
     "eventemitter3": "^5.0.1",
     "fast-xml-parser": "^4.3.6",
-    "lucide-react": "^0.546.0",
+    "lucide-react": "^0.548.0",
     "nitro": "^3.0.1-alpha.0",
     "openai": "^4.47.3",
     "p-retry": "^6.2.0",
@@ -66,7 +66,7 @@
     "react-dom": "^18.3.1",
     "robots-parser": "^3.0.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "undici": "^6.19.4",
     "zod": "^3.23.8"
@@ -96,6 +96,7 @@
     "rimraf": "^5.0.5",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.4.5",
     "vite": "^7.0.0",
     "vite-tsconfig-paths": "^5.0.0",
