ui: migrate to shadcn components
- Add @src/common/ui components (button, input, select, table, etc.)
- Implement data-table, date-picker, combobox primitives
- Replace native selects with Radix Select; remove NativeSelect
- Move utils to cn, update components.json aliases
- Wire Toaster; inline favicon to prevent 404
- Sweep views to use shadcn primitives
- Update AGENTS.md UI conventions

--- a/components.json
+++ b/components.json
@@ -14,8 +14,8 @@
     "components": "@src/common",
     "utils": "@src/common/ui/cn",
     "ui": "@src/common/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "lib": "@/common/ui/lib",
+    "hooks": "@/common/hooks"
   },
   "iconLibrary": "lucide"
 }
