feat: end-to-end SEO Agent wiring + auth fixes
- Workflow/docs: background loops, bundles, boundaries, worker split
- Providers: DataForSEO expand/metrics/SERP; OpenAI LLM; Exa research
- Global caches: canon + monthly metrics; SERP TTL + anchors; costs summary (atomic)
- Queue/manager: recipe + transitions; crawler/general worker entries; compose files
- Processors N1–N13: crawl, discovery, score, plan, serp, competitors, generate, enrich, publish, metrics, feedback
- API/CLI: schedules, warmers, refresh, bundle, costs, logs; project create auto-crawl
- Auth: fixed login loop; added debug logs; SSR-safe guard pattern basis
- Misc: dockerfiles, scripts/e2e-dry-run.sh; tsconfig paths for server fns

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@common/*": ["src/common/*"],
       "@entities/*": ["src/entities/*"],
       "@entities": ["src/entities/index.ts"],
+      "@server/*": ["src/server/*"],
       "@cli/*": ["src/cli/*"],
       "@worker/*": ["src/worker/*"]
     }
@@ -35,6 +36,7 @@
     "src/common",
     "src/entities",
     "src/cli",
+    "src/server",
     "src/worker",
     "tests",
     "vite-env.d.ts",
