--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cli:build": "bun build src/cli/index.ts --outdir dist/cli --target node --format esm --entry-naming [name].mjs --external ora --external commander",
     "polar:setup": "bunx tsx scripts/polar-setup.ts",
     "worker": "bunx tsx src/worker/index.ts",
+    "worker:general": "SEOA_QUEUE_NAME=seo_jobs.general SEOA_BINDING_KEY='discovery.*,score.*,plan.*,generate.*,publish.*,metrics.*,serp.*,competitors.*,enrich.*,feedback.*' bunx tsx src/worker/index.ts",
+    "worker:crawler": "SEOA_QUEUE_NAME=seo_jobs.crawler SEOA_BINDING_KEY='crawl.*' bunx tsx src/worker/index.ts",
     "worker:build": "bun build src/worker/index.ts --outdir dist/worker --target bun --format esm --entry-naming [name].mjs --external playwright --external playwright-core --external electron --external chromium-bidi/lib/cjs/bidiMapper/BidiMapper --external chromium-bidi/lib/cjs/cdp/CdpConnection",
     "worker:test": "vitest run src/worker",
     "e2e": "playwright test"
