--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,22 +1,18 @@
 FROM mcr.microsoft.com/playwright:v1.45.0-jammy
 WORKDIR /app
 
-# Install bun
+# Install Bun for fast, deterministic installs using bun.lock
 ENV BUN_INSTALL=/root/.bun
 ENV PATH=/root/.bun/bin:$PATH
 RUN apt-get update && apt-get install -y curl ca-certificates && rm -rf /var/lib/apt/lists/* \
   && curl -fsSL https://bun.sh/install | bash
 
-# Install deps
+# Copy manifests and install deps
 COPY package.json bun.lock ./
 RUN bun install --frozen-lockfile
 
 # Copy source
 COPY . .
 
-# Defaults: crawler worker binding
-ENV SEOA_QUEUE_NAME=seo_jobs.crawler
-ENV SEOA_BINDING_KEY=crawl.*
-
+# Use tsx CLI to be compatible across Node versions
 CMD ["bun", "x", "tsx", "src/worker/index.ts"]
-
