--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "cli:dev": "bunx tsx src/cli/index.ts",
     "cli:build": "bun build src/cli/index.ts --outdir dist/cli --target node --format esm --entry-naming [name].mjs --external ora --external commander",
     "polar:setup": "bunx tsx scripts/polar-setup.ts",
-    "worker": "SEOA_QUEUE_NAME=seo_jobs.general SEOA_BINDING_KEY='discovery.*,score.*,plan.*,generate.*,publish.*,metrics.*,serp.*,competitors.*,enrich.*,feedback.*' bunx tsx src/worker/index.ts",
-    "crawler": "SEOA_QUEUE_NAME=seo_jobs.crawler SEOA_BINDING_KEY='crawl.*' bunx tsx src/worker/index.ts",
+    "worker": "tsx src/worker/index.ts",
     "worker:build": "bun build src/worker/index.ts --outdir dist/worker --target bun --format esm --entry-naming [name].mjs --external playwright --external playwright-core --external electron --external chromium-bidi/lib/cjs/bidiMapper/BidiMapper --external chromium-bidi/lib/cjs/cdp/CdpConnection",
     "worker:test": "vitest run src/worker",
     "smoke": "bunx tsx scripts/smoke.ts",
@@ -140,6 +139,8 @@
     "tsx": "^4.7.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.4.5",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
     "vite": "^7.0.0",
     "vite-tsconfig-paths": "^5.0.0",
     "vitest": "^1.6.0"
