db:prepare: ensure drizzle journal exists before migrate; run in db:reset

--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "bin": {
-    "seo": "dist/cli/index.mjs"
-  },
   "packageManager": "bun@1.3.0",
   "engines": {
     "bun": ">=1.0.0",
@@ -21,11 +18,10 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "db:generate": "bunx drizzle-kit generate",
+    "db:prepare": "bunx drizzle-kit up",
     "db:migrate": "bunx drizzle-kit migrate",
-    "db:reset": "bunx tsx scripts/db-reset.ts && bun run db:migrate",
+    "db:reset": "bunx tsx scripts/db-reset.ts && bun run db:prepare && bun run db:migrate",
     "shadcn": "bunx shadcn-ui@latest",
-    "cli:dev": "bunx tsx src/cli/index.ts",
-    "cli:build": "bun build src/cli/index.ts --outdir dist/cli --target node --format esm --entry-naming [name].mjs --external ora --external commander",
     "polar:setup": "bunx tsx scripts/polar-setup.ts",
     "worker": "tsx src/worker/index.ts",
     "worker:build": "bun build src/worker/index.ts --outdir dist/worker --target bun --format esm --entry-naming [name].mjs --external playwright --external playwright-core --external electron --external chromium-bidi/lib/cjs/bidiMapper/BidiMapper --external chromium-bidi/lib/cjs/cdp/CdpConnection",
