--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^5.2.2",
     "@polar-sh/sdk": "^0.40.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -75,6 +77,8 @@
     "@tiptap/react": "^3.9.1",
     "@tiptap/starter-kit": "^3.9.1",
     "@vitejs/plugin-react": "^5.0.4",
+    "@aws-sdk/client-s3": "^3.686.0",
+    "@aws-sdk/s3-request-presigner": "^3.686.0",
     "amqplib": "^0.10.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -105,6 +109,7 @@
     "tailwindcss": "^4.1.16",
     "undici": "^6.19.4",
     "vaul": "^1.1.2",
+    "ws": "^8.18.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -139,6 +144,7 @@
     "pino-pretty": "^11.2.2",
     "vite": "^7.0.0",
     "vite-tsconfig-paths": "^5.0.0",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "@types/ws": "^8.5.12"
   }
 }
