--- a/package.json
+++ b/package.json
@@ -71,11 +71,17 @@
     "@tanstack/react-start": "^1.133.15",
     "@tanstack/react-table": "^8",
     "@tanstack/router-devtools": "^1.133.15",
-    "@tiptap/extension-link": "^3.9.1",
-    "@tiptap/extension-placeholder": "^3.9.1",
-    "@tiptap/pm": "^2.6.4",
-    "@tiptap/react": "^3.9.1",
-    "@tiptap/starter-kit": "^3.9.1",
+    "@tiptap/core": "^3.10.2",
+    "@tiptap/extension-link": "^3.10.2",
+    "@tiptap/extension-image": "^3.10.2",
+    "@tiptap/extension-table": "^3.10.2",
+    "@tiptap/extension-table-row": "^3.10.2",
+    "@tiptap/extension-table-header": "^3.10.2",
+    "@tiptap/extension-table-cell": "^3.10.2",
+    "@tiptap/extension-placeholder": "^3.10.2",
+    "@tiptap/pm": "^3.10.2",
+    "@tiptap/react": "^3.10.2",
+    "@tiptap/starter-kit": "^3.10.2",
     "@vitejs/plugin-react": "^5.0.4",
     "@aws-sdk/client-s3": "^3.686.0",
     "@aws-sdk/s3-request-presigner": "^3.686.0",
